--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "InstaClone",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.5.0",
+    "bootstrap-material-design": "^4.1.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/miketa-webprgr/instagram_clone.git",
+  "author": "miketa_webprgr <ksuedomi91@gmail.com>",
+  "license": "MIT"
 }
