--- a/config/database.yml
+++ b/config/database.yml
@@ -18,8 +18,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: <%= Rails.application.credentials.mysql[:db_user] %>
-  password: <%= Rails.application.credentials.mysql[:db_pass] %>
+  username: root
+  password:
   socket: /tmp/mysql.sock
 
 development:
