--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore database.yml
+/config/database.yml
+
 # Ruby関係
 *.gem
 *.rbc
