--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "bootstrap": "^4.5.0",
     "bootstrap-material-design": "^4.1.3",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "swiper": "^6.0.0"
   },
   "version": "1.0.0",
   "main": "index.js",
