mysqlのdockerimage変更に伴う修正（試しに）part2

--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -4,8 +4,8 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: 127.0.0.1
   port: 3306
-  username: root
-  password:
+  username: user
+  password: passw0rd
 
 test:
   <<: *default
