--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs: # 一連のステップ
       - image: circleci/mysql:5.7 # データベース イメージ
         environment: # データベースの環境変数
           # よく分からないが、試しに書き換えてみた
-          MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test_db
+          MYSQL_ROOT_PASSWORD: passw0rd
+          MYSQL_DATABASE: circle_test
           MYSQL_USER: user
           MYSQL_PASSWORD: passw0rd
     steps: # 実行可能コマンドの集合
